ping_pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
#      volumes:
#        - name: shared-ping-pong-output
#          persistentVolumeClaim:
#            claimName: ping-pong-claim
      containers:
        - name: ping-pong
          image: tniemi/dwk-ping-pong:2.7
